app/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appvote
  labels:
    app: appvotetag
spec:
  selector:
    matchLabels:
      app: appvotetag
  replicas: 1
  template:
    metadata:
      labels:
        app: appvotetag
    spec:
      containers:
      - name: appvote
        image: joffreydupire/simplon-voting-app:latest
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 250m
            memory: 1Gi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: appvotetag
spec:
  selector:
    app: appvotetag
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: appvotetag
#   annotations:
#     kubernetes.io/ingress.class: azure/application-gateway
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: appvotetag
#             port:
#               number: 80
#         pathType: Exact
