app/appingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - secretName: tls
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clustvoteapp
            port:
              number: 80
