app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-basicauth@kubernetescrd,default-whitelist@kubernetescrd,default-redirecthttps@kubernetescrd
spec:
  rules:
  - host: brief11.alain-cpn.space
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: appvotetag
            port:
              number: 80

---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: basicauth
# spec:
#   basicAuth:
#     secret: authsecret
#     removeHeader: false

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whitelist
spec:
  ipWhiteList:
    sourceRange:
      - 90.51.125.151

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-to-https-redirect
  namespace: default
spec:
  entryPoints:
    - web # Change this?
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 1
      middlewares:
        - name: redirecthttps
      services:
        - kind: TraefikService
          name: noop@internal
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecthttps
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
